# clingcon

./: .clang-tidy  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .ycm_extra_conf.py  CHANGES  CHANGES.md  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE.md  MANIFEST.in  Makefile  README.md  SConscript  SConstruct  THOUGHTS  TODO  appveyor.yml  csp.lp  fail.txt  format.sh  pyproject.toml  setup.py  test.cc  test.lp  test.sh
.github/: adjust_version.py  conda.py  deploy.yml  generic-env.yml  linux-env.yml  manylinux.py  pipsource.py  pipwinmac.py  rename.py  trigger.sh
.github/conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
.github/ppa-wip/: build.sh
.github/ppa-wip/bionic/debian/: changelog  control  rules
.github/ppa-wip/focal/debian/: NEWS  changelog  control  rules
.github/ppa-wip/jammy/debian/: changelog  copyright
.github/workflows/: conda-dev.yml  main.yml  manylinux.yml  pipsource.yml  pipwinmac-wip.yml  ppa-dev.yml
app/: CMakeLists.txt  main.cc  main.cpp
app/clingcon/: CMakeLists.txt
app/clingcon-light/: CMakeLists.txt  Makefile  THOUGHTS  format.sh  main.cpp  runtests.sh
app/clingcon-light/clingcon/: clingconorderpropagator.h  clingconpropagator.h  config.h  configs.h  constraint.h  domain.h  helper.h  linearpropagator.h  normalizer.h  platform.h  solver.h  storage.h  theoryparser.h  translator.h  types.h  variable.h
app/clingcon-light/examples/: bignumbers.lp  bucket.lp  incqueens3.lp  incqueens4.lp  move.lp  negative.lp  nqueens.lp  optimize.lp  show.lp
app/clingcon-light/src/: clingconorderpropagator.cpp  clingconpropagator.cpp  constraint.cpp  domain.cpp  linearpropagator.cpp  normalizer.cpp  storage.cpp  theoryparser.cpp  translator.cpp
app/clingcon-light/test/src/: clingcontest.cpp  constrainttest.cpp  domaintest.cpp  main.cpp  translatortest.cpp
app/clingcon-light/test/test/: testapp.h
app/clingcon-light/test/testlibclingcon/src/: clingcontest.cpp
app/clingcon-light/test/testliborder/src/: clingcontest.cpp  constrainttest.cpp  difflogictest.cpp  domaintest.cpp  equalitytest.cpp  linearpropagatortest.cpp  main.cpp  storagetest.cpp  testapp.cpp  translatortest.cpp  unitmain.cpp
app/clingcon-light/test/testliborder/test/: mysolver.h  testapp.h
app/clingcon/src/: clingcon_app.cc  clingcon_app.hh  main.cc  version.h
app/clingcon/src/clasp/: clasp_app.cpp
bug/: bug.lp  bug.py
clingo/clasp/src/: clingo.cpp  parallel_solve.cpp
cmake/: ClingconConfig.cmake.in  glob-paths.py  python-site.py
doc/api/: Doxyfile
examples/: bignumbers.lp  bucket.lp  bug.lp  bug2.lp  bug3.lp  bug4.lp  csp.lp  fsG.lp  fsT.lp  inc.lp  incqueens1.lp  incqueens2.lp  incqueens3.lp  incqueens4.lp  move.lp  multiobj.lp  negative.lp  nqueens.lp  onmodel-lua.lp  optimize.lp  pyclingcon.py  sendmoney.lp  sendmoremoney.lp  show.lp  unary.lp
libclingcon/: CMakeLists.txt  clingcon.h
libclingcon/clingcon/: astutil.hh  astutil_impl.hh  base.hh  clingconpropagator.h  config.h  configs.h  constraint.h  constraints.hh  domain.h  linearpropagator.h  normalizer.h  parsing.hh  platform.h  propagator.hh  solver.h  solver.hh  stats.h  storage.h  theoryparser.h  translator.h  types.h  util.hh  variable.h
libclingcon/src/: astutil.cc  base.cc  clingcon.cc  clingcon.cpp  clingconpropagator.cpp  constraint.cpp  constraints.cc  domain.cpp  linearpropagator.cpp  normalizer.cpp  parsing.cc  propagator.cc  solver.cc  storage.cpp  theoryparser.cpp  translator.cpp  util.cc
libclingcon/test/: test.sh
libclingcon/test/src/: clingcontest.cpp  constrainttest.cpp  domaintest.cpp  linearpropagatortest.cpp  main.cpp  translatortest.cpp
libclingcon/test/test/: testapp.h
libclingcon/tests/: CMakeLists.txt  assumptions.cc  astutil.cc  catch.hpp  csp.cc  fs.cc  money.cc  parsing.cc  solve.hh  util.cc
libpyclingcon/: CMakeLists.txt  _clingcon.c  compile.py
libpyclingcon/clingcon/: __init__.py  __main__.py  theory.py
scratch/: clingcon.py  compile.py  release-wv.sh  release.sh  runtests.py  theory.py
test/src/: clingcontest.cpp  main.cpp
